# Cocode

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_RESULTS.md  README.md  RUST_INTEGRATION.md  flake.nix  pyproject.toml
.agentastic/: settings.json
.github/workflows/: publish.yml
config/: settings.py
docs/plans/: 2026-01-13-graph-centrality-scoring-design.md  2026-01-13-search-relevance-improvements-design.md
src/: __init__.py  exceptions.py  models.py  server.py
src-rust/: bm25_engine.rs  code_parser.rs  graph_algos.rs  lib.rs  tokenizer.rs  utils.rs  vector_ops.rs
src/embeddings/: __init__.py  backend.py  jina.py  mistral.py  openai.py  provider.py
src/indexer/: call_graph_indexing.py  flow.py  repo_manager.py  service.py  symbol_indexing.py
src/monitoring/: __init__.py  metrics.py
src/parser/: ast_parser.py  call_extractor.py  symbol_extractor.py
src/retrieval/: __init__.py  bm25_search.py  call_graph.py  centrality.py  curation.py  file_categorizer.py  fts_setup.py  graph_cache.py  graph_expansion.py  hybrid.py  reranker.py  service.py  symbol_categorizer.py  symbol_implementation.py  symbol_search.py  tokenizer.py  ttl_cache.py  vector_search.py
src/rust_bridge/: __init__.py  bm25_engine.py  graph_algos.py
src/storage/: postgres.py  schema.py
tests/: test_ast_parser.py  test_call_extractor.py  test_curation.py  test_file_categorizer.py  test_graph_expansion_ast.py  test_indexer_service_change_detection.py  test_integration.py  test_js_rust_symbol_extractor.py  test_rust_bridge.py  test_server_tools.py  test_storage_schema.py  test_symbol_extractor.py  test_symbol_indexing_integration.py
tests/benchmarks/: test_performance.py
