[package]
name = "cocode-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "cocode_rust"
crate-type = ["cdylib"]
path = "src-rust/lib.rs"

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"] }
numpy = "0.27.1"
ndarray = "0.16"
rayon = "1.10"
ahash = "0.8"
smallvec = "1.13"

# BM25 and text processing
unicode-segmentation = "1.12"

# Graph algorithms
petgraph = "0.8.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
