[project]
name = "cocode"
version = "0.1.0"
description = "High-performance MCP server for codebase indexing and retrieval"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "cocoindex",
    "openai>=1.0",
    "cohere>=5.0",
    "httpx>=0.24",
    "psycopg[binary,pool]>=3.0",
    "python-dotenv>=1.0",
    "pathspec>=0.12",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "maturin>=1.7",
]

[project.scripts]
cocode = "src.server:main"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "cocode_rust"
features = ["pyo3/extension-module"]
